# devault

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  console-e2e.yml  docker-publish.yml  docs.yml  e2e-version-matrix.yml
alembic/: env.py
alembic/versions/: 20260507_0001_initial_jobs_artifacts.py  20260508_0002_policies_schedules.py  20260508_0003_agent_grpc_lease.py  20260508_0004_job_bundle_multipart_wip.py  20260509_0005_tenants.py  20260509_0006_control_plane_api_keys.py  20260509_0007_edge_agents.py  20260509_0008_restore_drill_and_job_result_meta.py  20260510_0009_jobs_created_at.py  20260510_0012_agent_pools_policy_binding.py  20260510_0017_tenant_invitations_sso.py  (+12 more)
console/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
deploy/: .env.stack.example  Dockerfile  Dockerfile.console  Dockerfile.postgres-pgbr-demo  alertmanager.yml  docker-compose.console-e2e.yml  docker-compose.e2e-matrix.override.yml  docker-compose.grpc-ha-example.yml  docker-compose.grpc-tls.yml  docker-compose.iam.yml  docker-compose.prometheus.yml  docker-compose.yml  prometheus.yml
docs/: README.md  RELEASE.md  compatibility.json  development-design.md  enterprise-backlog.md  iam-service-design.md  iam-tenant-lifecycle-and-bootstrap.md  s3-data-plane.md  target-architecture.md  web-console-i18n.md
docs-old/: README.md  development-design.md  docusaurus-information-architecture.md  enterprise-backlog-completed-archive.md  enterprise-backlog.md  grpc-tls.md  iam.md  s3-data-plane.md  target-architecture.md
iam/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
iam/alembic/: README.md  env.py
iam/alembic/versions/: 20260511_223955_6783edf0b20f_initial_schema.py  p0_001_schema_and_seed.py  p2_001_api_keys_and_scopes.py  p3_001_audit_logs.py  p4_001_users_platform_admin_flags.py
iam/docs/: BACKLOG.md  README.md
iam/src/devault_iam/: __init__.py  bootstrap.py  cli.py  cli_admin.py  settings.py
iam/src/devault_iam/api/: deps.py  main.py  middleware.py  principal.py
iam/src/devault_iam/api/routes/: api_keys.py  audit_logs.py  auth.py  authorize.py  me.py  members.py  mfa.py  platform_users.py  ready.py  tenants.py
iam/src/devault_iam/db/: __init__.py  base.py  constants.py  models.py  session.py
iam/src/devault_iam/observability/: __init__.py  prometheus_metrics.py
iam/src/devault_iam/repositories/: __init__.py  rbac.py
iam/src/devault_iam/schemas/: audit.py  auth.py  p2.py  platform_users.py  tenants.py
iam/src/devault_iam/security/: __init__.py  dev_keys.py  jwt_tokens.py  passwords.py  rate_limit.py
iam/src/devault_iam/services/: api_key_service.py  audit_service.py  auth_service.py  authorize_logic.py  permission_cache.py  permissions.py  platform_user_rules.py  readiness.py
iam/tests/: __init__.py  conftest.py  support_users.py  test_p0_schema.py  test_p1_auth_flow.py  test_p2_api_key_authorize.py  test_p3_audit_metrics.py  test_p4_platform_bootstrap.py  test_p4_platform_users_api.py  test_settings_production.py
proto/: agent.proto
scripts/: bump_release.py  ci_e2e_matrix_plan.py  e2e_grpc_register_heartbeat.py  export_openapi_json.py  gen_grpc_dev_tls.sh  gen_proto.sh  verify_compatibility_matrix.py  verify_console_openapi_contract.py  verify_release_docs.py  verify_ui_openapi_registry.py
tests/: test_agent_capabilities.py  test_agent_enrollment.py  test_agent_grpc_session.py  test_agent_tokens.py  test_agent_version_gate.py  test_artifact_encryption.py  test_auth_context.py  test_auth_session_api.py  test_bootstrap_demo_stack.py  test_bump_release_compatibility.py  test_ci_e2e_matrix_plan.py  test_edge_agent_registry.py  test_file_backup_plugin.py  test_iam_jwt_auth.py  test_invitation_accept_api.py  test_local_storage.py  test_multipart_encrypt_checkpoint.py  test_multipart_plan.py  test_object_lock_params.py  test_observability_integrity.py  test_openapi_jobs_list_filters.py  test_path_precheck_service.py  test_pgbackrest_policy_config.py  test_pgbackrest_runner.py  test_policy_execution_binding.py  test_policy_paths_form_merge.py  test_presenters_tenant_agents.py  test_proto_contracts.py  test_restore_drill.py  test_retention_policy.py  test_rpc_governance.py  test_s3_client_credentials.py  test_settings_grpc_tls.py  test_sso_policy_unit.py  test_storage_profiles_api.py  test_storage_secrets.py  test_tenant_backup_allowlist.py  test_tenant_header_required.py  test_verify_compatibility_matrix.py  test_version_ssot.py
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
(+353 files in other folders)
